Lightweight static constructor initialiser (#7)
* Implement very lightweight static constructor initialiser with custom SPL autoloader w/o reflections.
* Remove unneeded dependency on 
* Update documentation
* Covered with tests

--- a/composer.json
+++ b/composer.json
@@ -13,23 +13,20 @@
         "php": ">=7.1"
     },
     "require-dev": {
-        "vladimmi/construct-static": "dev-master",
         "myclabs/php-enum": "^1.0",
         "phpunit/phpunit": "^7.5",
         "phpbench/phpbench": "^0.16.9"
     },
-    "suggest": {
-        "vladimmi/construct-static": "Allows to call __constructStatic on class load"
-    },
     "autoload": {
         "psr-4": {
-            "Dbalabka\\Enumeration\\": "src"
+            "Dbalabka\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
             "Dbalabka\\Enumeration\\Examples\\": "examples",
-            "Dbalabka\\Enumeration\\Tests\\": "tests"
+            "Dbalabka\\Enumeration\\Tests\\": "tests\\Enumeration",
+            "Dbalabka\\StaticConstructorLoader\\Tests\\": "tests\\StaticConstructorLoader"
         }
     }
 }
