--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "require-dev": {
         "myclabs/php-enum": "^1.0",
         "phpunit/phpunit": "^7.5",
-        "phpbench/phpbench": "^0.16.9"
+        "phpbench/phpbench": "^0.16.9",
+        "vimeo/psalm": "^3.5"
     },
     "autoload": {
         "psr-4": {
