Implemented Rust options and regular enum usage

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,11 @@ script:
   - php examples/class_static_construct.php
   - php examples/day.php
   - php examples/flag.php
+  - php examples/option.php
   - php examples/php-enum_comparision.php
   - php examples/planet.php
   - php examples/serialization_php74.php
+  - php examples/shape.php
 
 after_script:
   - curl -OL https://github.com/php-coveralls/php-coveralls/releases/download/v1.0.0/coveralls.phar
